--- a/feature-libs/pickup-in-store/styles/_store.scss
+++ b/feature-libs/pickup-in-store/styles/_store.scss
@@ -33,7 +33,7 @@
     .cx-store-opening-hours-icon {
       color: var(--cx-color-secondary);
       opacity: var(--cx-opacity, 0.5);
-      @include forFeature('a11yViewHoursButtonIconContrast') {
+      @include forFeature('a11yStoreImproveIconsContrast') {
         opacity: var(--cx-opacity, 1);
       }
     }
@@ -55,6 +55,9 @@
   .cx-store-stock-icon {
     color: var(--cx-color-secondary);
     opacity: var(--cx-opacity, 0.5);
+    @include forFeature('a11yStoreImproveIconsContrast') {
+      opacity: var(--cx-opacity, 1);
+    }
   }
 
   .cx-store-out-of-stock {
